style(PokemonDetails): fix alignment and image object-fit in image slider

--- a/src/components/ImageSlider/ImageSlider.scss
+++ b/src/components/ImageSlider/ImageSlider.scss
@@ -33,9 +33,10 @@
       img {
         width: 50px;
         height: 50px;
-        margin-right: 8px;
+        margin: 0 4px;
         cursor: pointer;
         border: 2px solid transparent;
+        object-fit: scale-down;
 
         &.selected {
           border-color: #3498db;
